--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,11 +21,9 @@
 title: NADA.NET
 email: thomas-ley@outlook.de
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+  Not Another Dotnet Api is just a collection of tools. Enjoy.
+baseurl: "/Nada.Net" # the subpath of your site, e.g. /blog
+url: "https://thomasley.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: cleancodecoach
 github_username:  ThomasLey
 
@@ -34,6 +32,11 @@ theme: minima
 plugins:
   - jekyll-feed
   - jemoji
+
+whitelist:
+  - jemoji
+  - minima
+  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
