--- a/src/Nada.Net/Nada.NZazu.Contracts/Nada.NZazu.Contracts.csproj
+++ b/src/Nada.Net/Nada.NZazu.Contracts/Nada.NZazu.Contracts.csproj
@@ -10,6 +10,12 @@
 		<PackageIcon>packageicon.png</PackageIcon>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
+	<PropertyGroup>
+		<Authors>Thomas Ley</Authors>
+		<Description>Nada NZazu is a package with a UI form generator.</Description>
+		<PackageProjectUrl>https://thomasley.github.io/Nada.Net/</PackageProjectUrl>
+		<PackageTags>library</PackageTags>
+	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 		<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
