--- a/src/Nada.Net/Nada.NZazu.Contracts/Nada.NZazu.Contracts.csproj
+++ b/src/Nada.Net/Nada.NZazu.Contracts/Nada.NZazu.Contracts.csproj
@@ -14,6 +14,8 @@
 		<Description>Nada NZazu is a package with a UI form generator.</Description>
 		<PackageProjectUrl>https://thomasley.github.io/Nada.Net/</PackageProjectUrl>
 		<PackageTags>library</PackageTags>
+		<IncludeSymbols>True</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
