--- a/src/Nada.Net/Nada/Nada.Core.csproj
+++ b/src/Nada.Net/Nada/Nada.Core.csproj
@@ -17,6 +17,8 @@
     <Description>Nada is a package with a lot of useful extensions and methods.</Description>
     <PackageProjectUrl>https://thomasley.github.io/Nada.Net/</PackageProjectUrl>
     <PackageTags>library</PackageTags>
+    <IncludeSymbols>True</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
