--- a/src/Nada.Net/Nada.NZazu/Nada.NZazu.csproj
+++ b/src/Nada.Net/Nada.NZazu/Nada.NZazu.csproj
@@ -21,6 +21,12 @@
 		<IncludeSymbols>True</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <DebugType>portable</DebugType>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <DebugType>portable</DebugType>
+	</PropertyGroup>
 	<ItemGroup>
 		<AppDesigner Include="Properties\" />
 	</ItemGroup>
