--- a/src/Nada.Net/Nada.NZazu.Contracts/Nada.NZazu.Contracts.csproj
+++ b/src/Nada.Net/Nada.NZazu.Contracts/Nada.NZazu.Contracts.csproj
@@ -14,7 +14,7 @@
 		<Description>Nada NZazu is a package with a UI form generator.</Description>
 		<PackageProjectUrl>https://thomasley.github.io/Nada.Net/</PackageProjectUrl>
 		<PackageTags>library</PackageTags>
-		<IncludeSymbols>True</IncludeSymbols>
+		<IncludeSymbols>False</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
