--- a/src/Nada.Net/Nada/Nada.Core.csproj
+++ b/src/Nada.Net/Nada/Nada.Core.csproj
@@ -17,7 +17,7 @@
     <Description>Nada is a package with a lot of useful extensions and methods.</Description>
     <PackageProjectUrl>https://thomasley.github.io/Nada.Net/</PackageProjectUrl>
     <PackageTags>library</PackageTags>
-    <IncludeSymbols>True</IncludeSymbols>
+    <IncludeSymbols>False</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
