--- a/src/Nada.Net/Nada.NZazu/Nada.NZazu.csproj
+++ b/src/Nada.Net/Nada.NZazu/Nada.NZazu.csproj
@@ -20,6 +20,12 @@
 		<PackageTags>library</PackageTags>
 		<IncludeSymbols>False</IncludeSymbols>
 	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <DebugType>embedded</DebugType>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <DebugType>embedded</DebugType>
+	</PropertyGroup>
 	<ItemGroup>
 		<AppDesigner Include="Properties\" />
 	</ItemGroup>
