--- a/src/Nada.Net/Nada.NZazu.Tests/Nada.NZazu.Tests.csproj
+++ b/src/Nada.Net/Nada.NZazu.Tests/Nada.NZazu.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net7.0-windows</TargetFramework>
@@ -17,10 +17,10 @@
 		</PackageReference>
 		<PackageReference Include="FluentAssertions" Version="6.11.0" />
 		<PackageReference Include="FluentAssertions.Json" Version="6.1.0" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.1" />
 		<PackageReference Include="NSubstitute" Version="5.0.0" />
 		<PackageReference Include="NUnit" Version="3.13.3" />
-		<PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
