--- a/src/Nada.Net/Nada.NZazu.Tests/Nada.NZazu.Tests.csproj
+++ b/src/Nada.Net/Nada.NZazu.Tests/Nada.NZazu.Tests.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net7.0-windows</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<GenerateDocumentationFile>False</GenerateDocumentationFile>
+		<SonarQubeExclude>true</SonarQubeExclude>
 	</PropertyGroup>
 
 	<ItemGroup>
